--- a/html/index.html
+++ b/html/index.html
@@ -69,10 +69,9 @@
 </nav>
 
 <section class="text-gray-900 bg-white body-font">
-  <div class="container px-5 py-24 mx-auto">
+  <div class="container px-5 py-16 mx-auto">
     <div class="flex flex-col text-center w-full mb-12">
-      <h1 class="sm:text-3xl text-2xl font-medium title-font mb-4 text-slate-950">Master Cleanse Reliac Heirloom</h1>
-      <p class="lg:w-2/3 mx-auto leading-relaxed text-base">Whatever cardigan tote bag tumblr hexagon brooklyn asymmetrical gentrify, subway tile poke farm-to-table. Franzen you probably haven't heard of them man bun deep.</p>
+      <p class="  text-5xl font-bold title-font mb-4 text-slate-950">Welcome To Our University</p>
     </div>
     <div class="flex lg:w-2/3 w-full sm:flex-row flex-col mx-auto px-8 sm:px-0 items-end sm:space-x-4 sm:space-y-0 space-y-4">
        
