--- a/html/index.html
+++ b/html/index.html
@@ -71,7 +71,7 @@
 <section class="text-gray-900 bg-white body-font">
   <div class="container px-5 py-16 mx-auto">
     <div class="flex flex-col text-center w-full mb-12">
-      <p class="  text-5xl font-bold title-font mb-4 text-slate-950">Welcome To Our University</p>
+      <p class=" text-2xl lg:text-5xl font-bold title-font mb-4 text-slate-950">Welcome To Our University</p>
     </div>
     <div class="flex lg:w-2/3 w-full sm:flex-row flex-col mx-auto px-8 sm:px-0 items-end sm:space-x-4 sm:space-y-0 space-y-4">
        
