--- a/html/index.html
+++ b/html/index.html
@@ -78,11 +78,9 @@
               Build products for everyone
           </h1>
           <h2 class="text-4xl text-gray-800 font-extrabold mx-auto md:text-5xl">
-              Design your projects faster with  <span class="text-transparent bg-clip-text bg-gradient-to-r from-[#4F46E5] to-[#E114E5]">the largest figma UI kit</span>
+              Design your projects faster with  <span class="text-transparent bg-clip-text bg-red-800">the largest figma UI kit</span>
           </h2>
-          <p class="max-w-2xl mx-auto">
-              Sed ut perspiciatis unde omnis iste natus voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae.
-          </p>
+          
           <div class="items-center justify-center gap-x-3 space-y-3 sm:flex sm:space-y-0">
               <a href="javascript:void(0)" class="block py-2 px-4 text-white font-medium bg-indigo-600 duration-150 hover:bg-indigo-500 active:bg-indigo-700 rounded-lg shadow-lg hover:shadow-none">
                   Browse courses
