--- a/html/index.html
+++ b/html/index.html
@@ -96,25 +96,35 @@
       </div>
     </nav>
 
+    <section class=" text-gray-950  ">
+      <div class="py-8 px-4 mx-auto max-w-screen-xl text-center lg:py-8 lg:pb-20 lg:px-12">
+        <p class="  text-sm   text-yellow-400 font-bold lg:text-xl sm:px-16 xl:px-48 dark:text-gray-400">
+          The best Learning Institution.</p>
+        <p
+          class="mb-4 text-4xl font-bold tracking-tight leading-none text-gray-900 md:text-5xl lg:text-6xl dark:text-white">
+          Welcom to Our Univ Camp</p>
 
-    <section>
-      <div class="max-w-screen-xl mx-auto px-4 py-16 gap-12 text-gray-600 md:px-8">
-        <div class="space-y-5 max-w-4xl mx-auto text-center">
-          <h1 class="text-sm text-indigo-600 font-medium">
+        <p class="mb-8 text-sm font-normal text-blue-800   sm:px-16 xl:px-64 dark:text-gray-400">
+          Here at Flowbite we focus on markets where technology, innovation, and capital can unlock
+          long-term value and drive economic growth.</p>
 
-          </h1>
-          <h2 class="text-4xl text-gray-800 font-extrabold mx-auto md:text-5xl">
-            WELCOME TO OUR UNIVERSITY <span class="text-transparent bg-clip-text bg-red-800"> <br>El Dorado
-              Nursing</span>
-          </h2>
+        <div class="flex flex-col mb-8 lg:mb-16 space-y-4 sm:flex-row sm:justify-center sm:space-y-0 sm:space-x-4">
 
-          <div class="items-center justify-center gap-x-3 space-y-3 sm:flex sm:space-y-0 mb-6">
-            <a href="javascript:void(0)"
-              class="block py-2 px-4 text-white font-medium bg-indigo-600 duration-150 hover:bg-indigo-500 active:bg-indigo-700 rounded-lg shadow-lg hover:shadow-none">
-              Contact Us
-            </a>
+          <a href="#"
+            class="inline-flex justify-center items-center py-3 px-5 text-base font-medium text-center text-gray-900 rounded-lg border border-gray-300 hover:text-gray-950 hover:bg-gray-100 focus:ring-4 focus:ring-gray-100 dark:text-white dark:border-gray-700 dark:hover:bg-gray-700 dark:focus:ring-gray-800">
+            <svg class="mr-2 -ml-1 w-5 h-5" fill="currentColor" viewBox="0 0 20 20"
+              xmlns="http://www.w3.org/2000/svg">
+              <path
+                d="M2 6a2 2 0 012-2h6a2 2 0 012 2v8a2 2 0 01-2 2H4a2 2 0 01-2-2V6zM14.553 7.106A1 1 0 0014 8v4a1 1 0 00.553.894l2 1A1 1 0 0018 13V7a1 1 0 00-1.447-.894l-2 1z">
+              </path>
+            </svg>
+            Learn more
+          </a>
+          <a href="#"
+            class="inline-flex justify-center items-center py-3 px-5 text-base font-medium text-center text-gray-900 rounded-lg border border-gray-300 hover:text-gray-950 hover:bg-gray-100 focus:ring-4 focus:ring-gray-100 dark:text-white dark:border-gray-700 dark:hover:bg-gray-700 dark:focus:ring-gray-800">
 
-          </div>
+            Contact Us
+          </a>
         </div>
 
       </div>
