--- a/html/index.html
+++ b/html/index.html
@@ -13,11 +13,11 @@
 
 
 
-<body class="bg-slate-900">
+<body class=" ">
 
 
 
-  <div class="bg-white">
+  <div class="bg-slate-900">
 
     <nav class=" border-gray-200 dark:bg-gray-900">
       <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
@@ -97,7 +97,7 @@
     </nav>
 
     <section class=" text-gray-950  ">
-      <div class="py-8 px-4 mx-auto max-w-screen-xl text-center lg:py-8 lg:pb-20 lg:px-12">
+      <div class="py-8 px-4 mx-auto max-w-screen-xl text-center lg:py-8 lg:pb-10 lg:px-12">
         <p class="  text-sm   text-yellow-400 font-bold lg:text-xl sm:px-16 xl:px-48 dark:text-gray-400">
           The best Learning Institution.</p>
         <p
@@ -105,8 +105,7 @@
           Welcom to Our Univ Camp</p>
 
         <p class="mb-8 text-sm font-normal text-blue-800   sm:px-16 xl:px-64 dark:text-gray-400">
-          Here at Flowbite we focus on markets where technology, innovation, and capital can unlock
-          long-term value and drive economic growth.</p>
+          Here at Flowbite we focus on markets where  </p>
 
         <div class="flex flex-col mb-8 lg:mb-16 space-y-4 sm:flex-row sm:justify-center sm:space-y-0 sm:space-x-4">
 
@@ -134,7 +133,7 @@
   </div>
 
 
-  <section class="text-gray-600 body-font">
+  <section class="  body-font   text-gray-900">
     <div class="container px-5 py-24 mx-auto">
       <div class="flex flex-wrap -m-4">
 
@@ -143,7 +142,7 @@
             <img class="lg:h-48 md:h-64 w-full object-cover object-center" src="gane.jpg" alt="blog">
             <div class="p-6">
               <h2 class="tracking-widest text-xs title-font font-medium text-gray-400 mb-1">CATEGORY</h2>
-              <h1 class="title-font text-lg font-medium text-gray-900 mb-3">The Catalyzer</h1>
+              <h1 class="title-font text-lg font-medium text-gray-100 mb-3">The Catalyzer</h1>
               <p class="leading-relaxed mb-3">Photo booth fam kinfolk cold-pressed sriracha leggings jianbing microdosing tousled waistcoat.</p>
               <div class="flex items-center flex-wrap ">
                 <a class="text-indigo-500 inline-flex items-center md:mb-2 lg:mb-0">Learn More
