--- a/html/index.html
+++ b/html/index.html
@@ -111,7 +111,7 @@
     <div class=" flex flex-col md:flex-row gap-10">
 
 
-      <div class="md:w-2/3 bg-gray-900  pt-8  shadow-lg">
+      <div class="md:w-2/3 bg-gray-900    shadow-lg">
 
 
         <div class=" shadow-lg pb-12 ">
